@@ -15,44 +15,74 @@ public class Round {
         
     }
 
+    public ArrayList<Match> getRoundMatches(){
+        return matches;
+    }
 
-    public void generateMatches(){
-        createBrackets();
+    public boolean removePlayer( List<TournamentPlayer> a, TournamentPlayer p){
+
+        int i = 0;
+        while ( i < a.size()){
+            TournamentPlayer q = a.get(i);
+            if (p.getUserID().equals(q.getUserID())){
+                a.remove(i);
+                return true;
+            }
+            i++;
+        }
+        return false;
+    }
+
+
+    public void generateMatches(ArrayList<Match> matches){
+        this.createBrackets(new ArrayList<List<TournamentPlayer>>());
+    
+        this.matches = matches;
+
+        
         boolean isMatched;
 
         for ( List<TournamentPlayer> bracket : brackets ){
             
             List<TournamentPlayer> bracketcopy = new ArrayList<TournamentPlayer>(bracket);
             Collections.shuffle(bracketcopy);
-
-            while (bracket.size() != 2){
+            HashSet<TournamentPlayer> matched = new HashSet<TournamentPlayer>();
+            //while (bracket.size() != 2)
+            for (TournamentPlayer p1: bracket){
                 
-                TournamentPlayer p1 = bracket.getFirst();
+
+                
+                //TournamentPlayer p1 = bracket.get(0);
                 Iterator<TournamentPlayer> bracketIt = bracketcopy.iterator();
                 isMatched = false;
                 
 
-                while(bracketIt.hasNext() && !isMatched){
+                while(bracketIt.hasNext() && !isMatched && !matched.contains(p1)){
                     TournamentPlayer p2 = bracketIt.next();
-                    if (!p1.hasPlayed(p2) && !p1.equals(p2)){
+                    if (!p1.hasPlayed(p2) && !p1.equals(p2) && !matched.contains(p2) && !matched.contains(p1)){
                         matches.add(new Match(p1, p2));
-                        bracket.removeFirst();
-                        bracket.remove(p2);
-                        bracketcopy.removeFirst();
-                        bracketcopy.remove(p2);
+                        matched.add(p2);
+                        matched.add(p1);
                         isMatched = true;
                     }
+                    // if ( bracketcopy.contains(p1) || bracketcopy.contains(p2) || bracket.contains(p1) || bracket.contains(p2)){
+                    //     System.out.println("fck");
+                    // }
+
+
                 }
 
                 if (!isMatched){
-                    matches.add(new Match(p1, bracketcopy.getLast()));
-                    bracketcopy.removeLast();
-                    bracket.removeFirst();
+                    matches.add(new Match(p1, bracketcopy.get(bracketcopy.size()-1)));
+
+                    matched.add(p1);
+                    matched.add(bracketcopy.get(bracketcopy.size()-1));
+                    
                 }
                 
             }
 
-            matches.add(new Match(bracket.getFirst(), bracketcopy.getLast()));
+            // matches.add(new Match(bracket.get(0), bracketcopy.get(1)));
         }
         
     }
@@ -65,11 +95,8 @@ public class Round {
     public void generateRoundOne(){
         Collections.shuffle(players);
 
-        int tomatch = players.size() ;
-
         if (players.size() % 2 == 1){
-            matches.add(new Match(players.getLast()));
-            tomatch--;
+            matches.add(new Match(players.get(players.size()-1)));
         }
 
         for (int i = 0; i < players.size()/2; i++){
@@ -77,19 +104,22 @@ public class Round {
         }
     }
 
-    public void createBrackets(){
+    public void createBrackets(ArrayList<List<TournamentPlayer>> brackets){
 
+        this.brackets = brackets;
         stillplaying =  new ArrayList<TournamentPlayer>(prevRoundStandings.getSortedPlayers());
+
 
         stillplaying.removeIf(p -> !p.isPlaying());
 
         if (stillplaying.size()%2  == 1){
-            matches.add(new Match(stillplaying.getLast()));
-            stillplaying.removeLast();
+            matches.add(new Match(stillplaying.get(stillplaying.size()-1)));
+            stillplaying.remove(stillplaying.size()-1);
+            
         }
 
-        int curPts = stillplaying.getFirst().getTotalGamePoints();
-        int curBracketSize = 0;
+        int curPts = stillplaying.get(0).getTotalGamePoints();
+        
         List<TournamentPlayer> bracket = new ArrayList<TournamentPlayer>(); 
 
         Iterator<TournamentPlayer> plIterator = stillplaying.iterator();
@@ -101,24 +131,23 @@ public class Round {
             
             if (curPts != p.getCurMatchPts()){
                 curPts = p.getCurMatchPts();
-                if (curBracketSize%2 == 1){
+                if (bracket.size()%2 == 1){
                     bracket.add(p);
                     brackets.add(bracket);
                     bracket = new ArrayList<TournamentPlayer>();
-                    curBracketSize = 0;
                 }else{
                     brackets.add(bracket);
                     bracket = new ArrayList<TournamentPlayer>();
                     bracket.add(p);
-                    curBracketSize = 1;
                 }
                 
             }else{
                 bracket.add(p);
-                curBracketSize++;
             }
 
         }
+
+        brackets.add(bracket);
     }
 
     public Standings getStandings(){
